# Calculator-Library

./: pyproject.toml  setup.cfg
Calculator_Library.egg-info/: PKG-INFO  SOURCES.txt
test/: calculator.py
