[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Calculator-Library"
version = "1.0.0"
authors = [
  { name="Vishnuram", email="vishnurammk762@gmail.com" },
]
description = "Testing the Calculator Library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MKVishnuram/Calculator-Library.git"
"Bug Tracker" = "https://github.com/MKVishnuram/Calculator-Library.git/issues"

[tool.setuptools]
packages = [
    "test"
]